--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 FLASK_APP=run.py
 FLASK_ENV=development
-SQLALCHEMY_DATABASE_URI=postgresql://postgres:1@localhost/something
+SQLALCHEMY_DATABASE_URI=
 SECRET_KEY=your_secret_key
